--- a/_Pages/_Home/Home.html
+++ b/_Pages/_Home/Home.html
@@ -7,10 +7,10 @@
 <body>
     <div class="Screen" id="ScreenA">
         <div class="NavBar" id="NavBar">
-            <a href="#"><div class="NBT" id="NBT1">Home</div></a>
-            <a href="#"><div class="NBT" id="NBT2">About</div></a>
-            <a href="#"><div class="NBT" id="NBT3">Download</div></a>
-            <A href="#"><div class="NBT" id="NBT4">Contact</div></a>
+            <a href="#ScreenA"><div class="NBT" id="NBT1">Home</div></a>
+            <a href="#ScreenB"><div class="NBT" id="NBT2">About</div></a>
+            <a href="#ScreenC"><div class="NBT" id="NBT3">Download</div></a>
+            <A href="#ScreenD"><div class="NBT" id="NBT4">Contact</div></a>
         </div>
         <h1>DragonSpy</h1>
     </div>
